Change Log for Kicad
Started 2007-June-11

Please add newer entries at the top, list the date and your name with 
email address.

2007-Sep-13 UPDATE   Dick Hollenbeck <dick@softplc.com>
================================================================================
+ kicad
  * Inverted the logic associated with filters.  Filters now enable a file
    in the project manager.  The default is to ignore all files.
  * The filter for *.sch files is smarter, in that it looks to display only
    top level *.sch files, rather than all *.sch files.
+ Others
    More beautification


2007-sept-13 UPDATE   Jean-Pierre Charras <jean-pierre.charras@inpg.fr>
================================================================================
+ all
	* EDA_BaseStruct.SetType() removed.
	The m_StructType member of class EDA_BaseStruct is no more modified in kicad.
	Now Virtual functions can be widely used.
	* The old EDA_BaseStruct.ReturnClassName() was removed.
	the virtual EDA_BaseStruct.GetClass() is used instead. 

+ gerbview: hotkeys Ok.


2007-Sep-13 UPDATE   Geoff Harland <gharlandau@yahoo.com.au>
================================================================================
+ eeschema & pcbnew & gerbview
    A Cancel button has now been provided for the "Colors" dialog box, which also
    permits it to (otherwise) be cancelled by pressing the "Esc" key; the button
    whose color matches that of the color currently selected (for the layer being
    edited) also has the initial focus set to it.


2007-Sep-11 UPDATE   Dick Hollenbeck <dick@softplc.com>
================================================================================
+ pcbnew
  * Changed PcbLocateAndDisplay() to be tool specific in its search and to present
    a popup menu when there are multiple items under the mouse.  It is also
    a framework for future enhancements.
    @todo: grep for @todo and finish off those tasks.
  * Introduced a formal notion of "selected item".  This is done with the addition